--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <h1> Welcome to nginx</h1>
 <p> Created by: Cerulean Canvas </p>
-<p> Powered by: Docker.Inc </p>
-<a href="http://1000logos.net/docker-logo/</a>
+<p> Powered by: Docker.Inc 
+ <a href="https://github.com/cerulean-canvas/CMC/blob/master/horizontal.png">github.com</a>.</p>
 </body>
 </html>
 
