--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1> Welcome to nginx</h1>
 <p> Created by: Cerulean Canvas </p>
 <p> Powered by: Docker.Inc 
- <a href="https://github.com/cerulean-canvas/CMC/blob/master/horizontal.png">github.com</a>.</p>
+ <a> href=https://github.com/cerulean-canvas/CMC/blob/master/horizontal.png</a>.</p>
 </body>
 </html>
 
