--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
 <h1> Welcome to nginx</h1>
 <p> Created by: Cerulean Canvas </p>
-<p> Powered by: Docker.Inc 
- <a> href=https://github.com/cerulean-canvas/CMC/blob/master/horizontal.png</a>.</p>
+<p> Powered by: Docker.Inc</p>
 </body>
 </html>
 
