--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Welcome to nginx!</title>
-<style>
- body {
- width: 35em;
- margin: 0 auto;
- font-family: Tahoma, Verdana, Arial, sans-serif;
- }
-</style>
+<meta charset="UTF-8">
+<title>Cerulean Canvas</title>
 </head>
 <body>
-<h1> Welcome to nginx</h1>
-<p> Created by: Cerulean Canvas </p>
-<p> Powered by: Docker.Inc</p>
+<h1>Container Master Class: Docker and Kubernetes </h1>   
 </body>
 </html>
 
